<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:layout_marginTop="10dp"
    tools:context=".EditProfile">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/constraintLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/editProfileFoto"
            android:contentDescription="@string/desc_edit_profile_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:src="@drawable/icon_profile"
            tools:tint="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/editProfileNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:hint="Nama"
            app:backgroundTint="@color/colorPrimaryDark"
            tools:text="Nama"
            android:autofillHints="Nama"/>

        <EditText
            android:id="@+id/editProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:hint="Status"
            app:backgroundTint="@color/colorPrimaryDark"
            tools:text="Status"
            android:autofillHints="Status"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="Password"
            app:backgroundTint="@color/colorPrimaryDark"
            tools:text="password"
            android:inputType="textPassword"
            android:autofillHints="Password"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorAlert"
            android:textSize="12sp"
            android:text="@string/text_change_password"/>

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"
            android:hint="@string/text_new_password"
            android:autofillHints="New Password"
            app:backgroundTint="@color/colorPrimaryDark"
            tools:text="New Password"/>

        <EditText
            android:id="@+id/editNewRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"
            android:hint="@string/text_new_re_password"
            android:autofillHints="New Re-Password"
            app:backgroundTint="@color/colorPrimaryDark"
            tools:text="New Password"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack"/>

    </LinearLayout>
</ScrollView>

<android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <Button
        android:id="@+id/editSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_simpan"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />
</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>